--- a/holidaymaker/src/main/resources/templates/index.html
+++ b/holidaymaker/src/main/resources/templates/index.html
@@ -3,8 +3,10 @@
     <head>
         <title th:text="${title}"></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link rel="stylesheet" href="/css/default.css">
+        <link rel="stylesheet" th:if="${pageCss != null}" th:href="'/css/pages/'+${pageCss}+'.css'">
     </head>
     <body>
-        <p th:text="'Hello ' + ${username}" />
+        <div th:replace="'views/'+${page}"/>
     </body>
 </html>
