--- a/holidaymaker/src/main/resources/templates/views/login.html
+++ b/holidaymaker/src/main/resources/templates/views/login.html
@@ -1,10 +1,18 @@
 <div class="main-container" th:fragment="login">
     <p th:text="'LOGIN PAGE'" />
-    <form id="loginForm" class="form-signin" method="post" action="/auth/login">
+    <form id="loginForm" autocomplete="false" class="form-signin" method="post" action="/auth/login">
         <label for="username" class="sr-only">Username</label>
-        <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
+        <input type="text" id="username" name="username" class="form-control" placeholder="Username"required autofocus >
         <label for="password" class="sr-only">Password</label>
         <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
+    
+    <!-- Vet inte hur man kopplar de här länkarna -->
+    <div class="register">
+        <a href="#">Register</a>
+        <div>|</div>
+        <a href="#">Lost Your Password?</a>
+    </div>
+    
 </div>
