--- a/holidaymaker/src/main/resources/templates/error.html
+++ b/holidaymaker/src/main/resources/templates/error.html
@@ -1,1 +1,9 @@
-error page, 404 not found :<
+<div class="main-container">
+    <div class="404">
+        4 
+        <span>0</span>
+        4
+    </div>
+    <div class="error-msg"></div>
+    <a href="/">Back To Home</a>
+</div>
