--- a/holidaymaker/src/main/resources/templates/index.html
+++ b/holidaymaker/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="/css/default.css">
         <link rel="stylesheet" href="/css/login.css">
         <link rel="stylesheet" th:if="${pageCss != null}" th:href="'/css/pages/'+${pageCss}+'.css'">
+        <script src="/js/vendor/jquery351.js" charset="utf-8"></script>
     </head>
     <body>
         <div th:replace="'views/'+${page}"/>
