--- a/holidaymaker/src/main/resources/static/css/default.css
+++ b/holidaymaker/src/main/resources/static/css/default.css
@@ -7,6 +7,7 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'arial',sans-serif;
+    background-color: var(--background-secondary);
 }
 
 a:hover, button:hover, input[type="submit"]:hover, .btn:hover, .button:hover {
@@ -36,6 +37,14 @@ a:hover {
 .form-group {
     margin: 2.5px 0px;
     padding: 2.5px 0px;
+}
+
+.form-control {
+    border: none;
+    font-size: 1.2em;
+    padding: 13px 10px;
+    outline: none;
+    background: #f7f7f7;
 }
 
 .flex,
