centralize form titles

--- a/holidaymaker/src/main/resources/templates/views/login.html
+++ b/holidaymaker/src/main/resources/templates/views/login.html
@@ -1,7 +1,7 @@
 <div class="main-container flex-content-center flex-align-center" th:fragment="login">
     <div class="login-container flex-row">
         <form id="loginForm" class="form-signin flex-row" method="post" action="/login">
-            <div class="form-title">Sign In</div>
+            <div class="form-title flex-content-center flex-align-center">Sign In</div>
             <div class="form-group flex-row">
                 <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
                 <input type="password" id="password" name="password" class="form-control" placeholder="••••••••" required>
