--- a/holidaymaker/src/main/resources/templates/views/register.html
+++ b/holidaymaker/src/main/resources/templates/views/register.html
@@ -1,7 +1,7 @@
 <div class="main-container flex-content-center flex-align-center" th:fragment="register">
     <div class="register-container flex-row">
         <form id="registerForm" class="form-signin flex-row" method="post" action="/register">
-            <div class="form-title">Register Account</div>
+            <div class="form-title flex-content-center flex-align-center">Register Account</div>
             <div class="form-group flex-row">
                 <input type="text" name="firstname" class="form-control" placeholder="Firstname" required>
                 <input type="text" name="lastname" class="form-control" placeholder="Lastname" required>
