--- a/holidaymaker/src/main/resources/templates/index.html
+++ b/holidaymaker/src/main/resources/templates/index.html
@@ -4,8 +4,9 @@
         <title th:text="${title}"></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" href="/css/default.css">
-        <link th:href="@{/css/login.css}" rel="stylesheet" />
-        <link rel="stylesheet" th:if="${pageCss != null}" th:href="'/css/pages/'+${pageCss}+'.css'">
+        <link rel="stylesheet" th:if="${pageCss != null}" th:href="${pageCss}">
+        <script src="/js/vendor/jquery351.js" charset="utf-8"></script>
+        <script src="/js/ajax.js" charset="utf-8"></script>
     </head>
     <body>
         <div th:replace="'views/'+${page}"/>
