--- a/holidaymaker/src/main/resources/static/css/pages/login.css
+++ b/holidaymaker/src/main/resources/static/css/pages/login.css
@@ -5,6 +5,7 @@
     border-bottom: 1px solid #d2d2d2;
     border-right: 1px solid #ddd;
     border-radius: 3px;
+    box-sizing: border-box;
 }
 
 .btn-login {
