--- a/holidaymaker/src/main/resources/templates/index.html
+++ b/holidaymaker/src/main/resources/templates/index.html
@@ -7,6 +7,12 @@
         <link rel="stylesheet" href="/css/alerts.css">
         <link rel="stylesheet" href="/css/buttons.css">
         <link rel="stylesheet" th:if="${pageCss != null}" th:href="${pageCss}">
+
+        <link rel="stylesheet"
+              href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+              integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
+              crossorigin="anonymous">
+
         <script src="/js/vendor/jquery351.js" charset="utf-8"></script>
         <script src="/js/constants.js" charset="utf-8"></script>
         <script src="/js/customFunctions.js" charset="utf-8"></script>
