--- a/holidaymaker/src/main/resources/templates/views/main.html
+++ b/holidaymaker/src/main/resources/templates/views/main.html
@@ -100,10 +100,9 @@
                 <div class="result-hotels">
                     <div class="result-title">hotels</div>
                     <div class="result-body">
-                        <!--div class="hotel flex-content-space-between">
+                        <!-- <div class="hotel">
                             <div class="hotel-name">Hotel Name</div>
-                            <div class="hotel-rooms">5 / 10</div>
-                        </div-->
+                        </div> -->
                     </div>
                 </div>
                 <div class="result-rooms">
