work related to sorting prices

--- a/holidaymaker/src/main/resources/templates/views/main.html
+++ b/holidaymaker/src/main/resources/templates/views/main.html
@@ -110,8 +110,8 @@
                         <span>Rooms</span>
                         <div class="flex-column flex-align-center">
                             <span style="font-size:12px;">Sort By Price</span>
-                            <a class="room-sort sort-asc"><i class="fas fa-arrow-up"></i></a>
-                            <a class="room-sort sort-desc"><i class="fas fa-arrow-down"></i></a>
+                            <a class="room-sort sort-asc" data-hotel-id="" data-action="asc"><i class="fas fa-arrow-up"></i></a>
+                            <a class="room-sort sort-desc" data-hotel-id="" data-action="desc"><i class="fas fa-arrow-down"></i></a>
                         </div>
                     </div>
                     <div class="result-body">
