--- a/holidaymaker/src/main/resources/templates/views/main.html
+++ b/holidaymaker/src/main/resources/templates/views/main.html
@@ -1,3 +1,127 @@
-<div class="main-container" th:fragment="main">
-    Main page
+<!-- Include nav.html from partials -->
+<div th:replace="partials/nav"/>
+
+<div class="main-container flex-column" th:fragment="main">
+    <div class="left-container">
+        <div class="bookings-container">
+            <div class="bookings-header">My Bookings</div>
+            <div class="bookings-body">
+                <div class="booking">
+                    <div class="booked-hotel flex-content-space-between flex-align-center">
+                        <span><i class="far fa-building"></i> Hotelname very long hehe</span>
+                        <a class="deleteBooking"><i class="far fa-times-circle"></i></a>
+                    </div>
+                    <div class="booked-rooms flex-column flex-wrap">
+                        <span>1</span>
+                        <span>2</span>
+                        <span>3</span>
+                        <span>4</span>
+                        <span>5</span>
+                        <span>6</span>
+                        <span>7</span>
+                        <span>8</span>
+                        <span>9</span>
+                    </div>
+                    <div class="booked-duration flex-content-space-between">
+                        <span class="date-from">Jan 1 '18</span>
+                        <span class="date-to">Jan 5 '18</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="right-container">
+        <div class="right-primary-container">
+            <form id="filterForm">
+                <div class="search-filter-container flex-row">
+                    <div class="search-filter-header">Search Filters</div>
+                    <div class="search-filter-body flex-column">
+                        <div class="search-filter-box">
+                            <div class="filter-title">Hotel</div>
+                            <div class="filter-content">
+                                <div class="flex-row">
+                                    <label for="hotelCountry">Country:</label>
+                                    <select class="hotelCountry" name="hotelCountry">
+                                        <option value="none" selected="true">-- choose --</option>
+                                        <option th:each="country: ${availableCountries}" th:text="${country}" th:value="${country}"></option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <div class="search-filter-box">
+                            <div class="filter-title">Room</div>
+                            <div class="filter-content">
+                                <div class="flex-row">
+                                    <div class="filter-label">Price</div>
+                                    <select class="roomPriceOrder" name="roomPriceOrder">
+                                        <option value="none" selected="true">-- choose ---</option>
+                                        <option value="asc">Cheapest First</option>
+                                        <option value="desc">Expensive First</option>
+                                    </select>
+                                </div>
+                                <div class="flex-row">
+                                    <div class="filter-label">Type</div>
+                                    <select class="roomType" name="roomType">
+                                        <option value="none" selected="true">-- choose ---</option>
+                                        <option th:each="roomType: ${availableRoomTypes}" th:text="${roomType}" th:value="${roomType}"></option>
+                                    </select>
+                                </div>
+                                <div class="flex-row">
+                                    <div class="filter-label">Availability</div>
+                                    <select class="roomAvailability" name="roomAvailability">
+                                        <option value="none" selected="true">-- choose ---</option>
+                                        <option value="available">Available</option>
+                                        <option value="taken">Taken</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div> -->
+                        <!--div class="search-filter-box">
+                            <div class="filter-title">Duration</div>
+                            <div class="filter-content">
+                                <div class="flex-row">
+                                    <div class="filter-label">Date & Time</div>
+                                    <div>
+                                        <input type="text" name="dateFrom" placeholder="from">
+                                        <input type="text" name="dateTo" placeholder="to">
+                                    </div>
+                                </div>
+                            </div>
+                        </div-->
+                    </div>
+                    <div class="filter-footer">
+                        <a id="searchFilterButton" class="button button-default button-medium button-grow">Fetch Results</a>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="right-secondary-container">
+            <div class="filter-result-container flex-column">
+                <div class="result-hotels">
+                    <div class="result-title">hotels</div>
+                    <div class="result-body">
+                        <!-- <div class="hotel">
+                            <div class="hotel-name">Hotel Name</div>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="result-rooms">
+                    <div class="result-title flex-content-space-between">
+                        <span>Rooms</span>
+                        <div class="flex-column flex-align-center">
+                            <span style="font-size:12px;">Sort By Price</span>
+                            <a class="room-sort sort-asc" data-hotel-id="" data-action="asc"><i class="fas fa-arrow-up"></i></a>
+                            <a class="room-sort sort-desc" data-hotel-id="" data-action="desc"><i class="fas fa-arrow-down"></i></a>
+                        </div>
+                    </div>
+                    <div class="result-body">
+                        <!--div class="room flex-content-space-between">
+                            <div class="room-id">[ 513 ]</div>
+                            <div class="room-price">123 €</div>
+                        </div-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
