--- a/holidaymaker/src/main/resources/templates/views/main.html
+++ b/holidaymaker/src/main/resources/templates/views/main.html
@@ -31,69 +31,114 @@
         </div>
     </div>
     <div class="right-container">
-        <div class="right-primary-container">
-            <form id="filterForm">
-                <div class="search-filter-container flex-row">
-                    <div class="search-filter-header">Search Filters</div>
-                    <div class="search-filter-body flex-column">
-                        <div class="search-filter-box">
-                            <div class="filter-title">Hotel</div>
-                            <div class="filter-content">
-                                <div class="flex-row">
-                                    <label for="hotelCountry">Country:</label>
-                                    <select class="hotelCountry" name="hotelCountry">
-                                        <option value="none" selected="true">-- choose --</option>
-                                        <option th:each="country: ${availableCountries}" th:text="${country}" th:value="${country}"></option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- <div class="search-filter-box">
-                            <div class="filter-title">Room</div>
-                            <div class="filter-content">
-                                <div class="flex-row">
-                                    <div class="filter-label">Price</div>
-                                    <select class="roomPriceOrder" name="roomPriceOrder">
-                                        <option value="none" selected="true">-- choose ---</option>
-                                        <option value="asc">Cheapest First</option>
-                                        <option value="desc">Expensive First</option>
-                                    </select>
-                                </div>
-                                <div class="flex-row">
-                                    <div class="filter-label">Type</div>
-                                    <select class="roomType" name="roomType">
-                                        <option value="none" selected="true">-- choose ---</option>
-                                        <option th:each="roomType: ${availableRoomTypes}" th:text="${roomType}" th:value="${roomType}"></option>
-                                    </select>
-                                </div>
-                                <div class="flex-row">
-                                    <div class="filter-label">Availability</div>
-                                    <select class="roomAvailability" name="roomAvailability">
-                                        <option value="none" selected="true">-- choose ---</option>
-                                        <option value="available">Available</option>
-                                        <option value="taken">Taken</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div> -->
-                        <!--div class="search-filter-box">
-                            <div class="filter-title">Duration</div>
-                            <div class="filter-content">
-                                <div class="flex-row">
-                                    <div class="filter-label">Date & Time</div>
-                                    <div>
-                                        <input type="text" name="dateFrom" placeholder="from">
-                                        <input type="text" name="dateTo" placeholder="to">
+        <div class="right-primary-container flex-column">
+            <div class="filter-form-container">
+                <form id="filterForm">
+                    <div class="search-filter-container flex-row">
+                        <div class="search-filter-header">Search Filters</div>
+                        <div class="search-filter-body flex-column">
+                            <div class="search-filter-box">
+                                <div class="filter-title">Hotel</div>
+                                <div class="filter-content">
+                                    <div class="flex-row">
+                                        <label for="hotelCountry">Country:</label>
+                                        <select class="hotelCountry" name="hotelCountry">
+                                            <option value="none" selected="true">-- choose --</option>
+                                            <option th:each="country: ${availableCountries}" th:text="${country}" th:value="${country}"></option>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
-                        </div-->
+                            <!-- <div class="search-filter-box">
+                                <div class="filter-title">Room</div>
+                                <div class="filter-content">
+                                    <div class="flex-row">
+                                        <div class="filter-label">Price</div>
+                                        <select class="roomPriceOrder" name="roomPriceOrder">
+                                            <option value="none" selected="true">-- choose ---</option>
+                                            <option value="asc">Cheapest First</option>
+                                            <option value="desc">Expensive First</option>
+                                        </select>
+                                    </div>
+                                    <div class="flex-row">
+                                        <div class="filter-label">Type</div>
+                                        <select class="roomType" name="roomType">
+                                            <option value="none" selected="true">-- choose ---</option>
+                                            <option th:each="roomType: ${availableRoomTypes}" th:text="${roomType}" th:value="${roomType}"></option>
+                                        </select>
+                                    </div>
+                                    <div class="flex-row">
+                                        <div class="filter-label">Availability</div>
+                                        <select class="roomAvailability" name="roomAvailability">
+                                            <option value="none" selected="true">-- choose ---</option>
+                                            <option value="available">Available</option>
+                                            <option value="taken">Taken</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div> -->
+                            <!--div class="search-filter-box">
+                                <div class="filter-title">Duration</div>
+                                <div class="filter-content">
+                                    <div class="flex-row">
+                                        <div class="filter-label">Date & Time</div>
+                                        <div>
+                                            <input type="text" name="dateFrom" placeholder="from">
+                                            <input type="text" name="dateTo" placeholder="to">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div-->
+                        </div>
+                        <!-- <div class="filter-footer">
+                            <a id="searchFilterButton" class="button button-default button-medium button-grow">Fetch Results</a>
+                        </div> -->
                     </div>
-                    <div class="filter-footer">
-                        <a id="searchFilterButton" class="button button-default button-medium button-grow">Fetch Results</a>
+                </form>
+            </div>
+            <div class="create-booking-contrainer">
+                <div class="bookings-header">
+                    New Booking
+                </div>
+                <div class="bookings-body">
+                    <div class="selected-room">
+                        <div class="new-booking-status"></div>
+                        <div class="selected-room-info flex-content-space-between flex-align-center">
+                            <span>Hotel Name</span><span>Room #1</span>
+                        </div>
+                        <div class="selected-room-extras">
+                            <form id="book-room-form" action="index.html" method="post">
+                                <input type="hidden" name="roomId" value="">
+                                <div class="form-group flex-row">
+                                    <input id="arrivalDate" type="text" name="arrivalDate" placeholder="from e.g: 2020-01-25">
+                                    <input id="departureDate" type="text" name="departureDate" placeholder="to e.g: 2020-02-13">
+                                </div>
+                                <div class="form-group">
+                                    <div>
+                                        <input type="checkbox" name="extraBed" value="1">
+                                        <span>Extra bed</span>
+                                    </div>
+                                    <div class="">
+                                        <input type="checkbox" name="twoMeals" value="2">
+                                        <span>Two meals</span>
+                                    </div>
+                                    <div class="">
+                                        <input type="checkbox" name="threeMeals" value="3">
+                                        <span>Three meals</span>
+                                    </div>
+                                    <div class="">
+                                        <input type="checkbox" name="allInclusive" value="4">
+                                        <span>All</span>
+                                    </div>
+                                </div>
+                                <div class="form-group flex">
+                                    <button class="button button-info button-medium button-grow" type="submit">Book room</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
         <div class="right-secondary-container">
             <div class="filter-result-container flex-column">
