check/uncheck extras when all-inclusive option is chosen

--- a/holidaymaker/src/main/resources/templates/views/main.html
+++ b/holidaymaker/src/main/resources/templates/views/main.html
@@ -115,19 +115,19 @@
                                 </div>
                                 <div class="form-group">
                                     <div>
-                                        <input type="checkbox" name="extraBed" value="1">
+                                        <input id="extraBed" type="checkbox" name="extraBed" value="1">
                                         <span>Extra bed</span>
                                     </div>
                                     <div class="">
-                                        <input type="checkbox" name="twoMeals" value="2">
+                                        <input id="twoMeals" type="checkbox" name="twoMeals" value="2">
                                         <span>Two meals</span>
                                     </div>
                                     <div class="">
-                                        <input type="checkbox" name="threeMeals" value="3">
+                                        <input id="threeMeals" type="checkbox" name="threeMeals" value="3">
                                         <span>Three meals</span>
                                     </div>
                                     <div class="">
-                                        <input type="checkbox" name="allInclusive" value="4">
+                                        <input id="all" type="checkbox" name="allInclusive" value="4">
                                         <span>All</span>
                                     </div>
                                 </div>
