--- a/holidaymaker/src/main/resources/static/css/alerts.css
+++ b/holidaymaker/src/main/resources/static/css/alerts.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: space-between;
 
+    margin-bottom: 5px;
     padding: 5px;
     border-radius: 3px;
     border: 1px solid transparent;
