--- a/holidaymaker/src/main/resources/templates/views/main.html
+++ b/holidaymaker/src/main/resources/templates/views/main.html
@@ -5,28 +5,8 @@
     <div class="left-container">
         <div class="bookings-container">
             <div class="bookings-header">My Bookings</div>
-            <div class="bookings-body">
-                <div class="booking">
-                    <div class="booked-hotel flex-content-space-between flex-align-center">
-                        <span><i class="far fa-building"></i> Hotelname very long hehe</span>
-                        <a class="deleteBooking"><i class="far fa-times-circle"></i></a>
-                    </div>
-                    <div class="booked-rooms flex-column flex-wrap">
-                        <span>1</span>
-                        <span>2</span>
-                        <span>3</span>
-                        <span>4</span>
-                        <span>5</span>
-                        <span>6</span>
-                        <span>7</span>
-                        <span>8</span>
-                        <span>9</span>
-                    </div>
-                    <div class="booked-duration flex-content-space-between">
-                        <span class="date-from">Jan 1 '18</span>
-                        <span class="date-to">Jan 5 '18</span>
-                    </div>
-                </div>
+            <div class="bookings-body user-bookings">
+                
             </div>
         </div>
     </div>
